tests/neg/i12208.scala
val pi: 3.14 = 3  // error
